CUDA version is ready :)

--- a/Assignment1/matmul_cuda/Makefile
+++ b/Assignment1/matmul_cuda/Makefile
@@ -1,5 +1,6 @@
 # See LICENSE.txt for license details.
 
+NVCC = nvcc
 CXX_FLAGS += -std=c++11 -O3 -Wall
 PAR_FLAG = -fopenmp
 #GENERATE = -D GENERATE
@@ -20,8 +21,15 @@ APPS = matmul transpose
 
 all: $(APPS)
 
-matmul: matmul.c mmio.c mm_kernel.c
-	$(CXX) $(CXX_FLAGS) $(GENERATE) $(TIMING) -o $@ $^ $(LFLAGS)
+%.o: %.c 
+	$(CXX) $(CXX_FLAGS) $(GENERATE) $(TIMING) -c  $^ $(LFLAGS)
+
+mm_kernel.o: mm_kernel.cu
+	$(NVCC) -O3 $^ -c
+
+matmul: matmul.o mmio.o mm_kernel.o
+	$(NVCC) matmul.o mmio.o mm_kernel.o -o $@
+
 
 transpose: transpose.c mmio.c
 	$(CXX) $(CXX_FLAGS) $(GENERATE) -o $@ $^ $(LFLAGS)
@@ -29,3 +37,4 @@ transpose: transpose.c mmio.c
 .PHONY: clean
 clean:
 	rm -f $(APPS)
+	rm *.o
